# faithcheck

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-27-faithcheck-v1.md
examples/task_suites/: commonsense_qa.jsonl  math_reasoning.jsonl
src/faithcheck/: __init__.py  config.py  models.py  orchestrator.py
src/faithcheck/adapters/: __init__.py  anthropic_adapter.py  base.py  google_adapter.py  openai_adapter.py  openai_compat.py
src/faithcheck/cli/: main.py
src/faithcheck/engine/: ablation.py  metrics.py  scoring.py
src/faithcheck/guardrails/: __init__.py  cost_tracker.py  rate_limiter.py
src/faithcheck/loaders/: __init__.py  jsonl_loader.py
src/faithcheck/reports/: __init__.py  json_report.py  markdown_report.py
tests/: conftest.py  test_config.py  test_e2e.py  test_models.py  test_orchestrator.py
tests/test_adapters/: test_anthropic_adapter.py  test_base.py  test_openai_adapter.py  test_openai_compat.py
tests/test_cli/: test_main.py
tests/test_engine/: test_ablation.py  test_metrics.py  test_scoring.py
tests/test_guardrails/: test_cost_tracker.py  test_rate_limiter.py
tests/test_loaders/: test_jsonl_loader.py
tests/test_reports/: test_json_report.py  test_markdown_report.py
